# FastAPI_Marketplace

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Docker-compose.yaml  README.MD  dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 1a8394f7a59a_.py  44e96c3d20aa_.py  48201efd3864_.py  5eb2d13de4cd_.py  730c32726886_.py  7a73993f8aaa_.py  7fa78f0628f0_.py  93a585693206_.py  96e15515f9fc_.py  9c3d570e3e19_init.py  bc5fa8a2f14e_.py  c78cdce7020d_.py  c8fc617d5154_.py  d8e97ac6be87_.py  e804829c8eae_.py  eb81cf45605a_.py  efb4f154e729_seed_gemstone_categories.py  f4d4e3e6fb37_.py
app/: dependencies.py  main.py
app/api/routers/: admin.py  auth.py  health.py  products.py  router.py  users.py
app/core/: config.py
app/core/security/: hashing_password.py  jwt_auth.py
app/db/: deps.py  sessions.py
app/models/: fields.py  models.py
app/repositories/: categories.py  products.py  refresh_sessions.py  roles.py  users.py
app/schemas/: auth.py  category.py  product.py  user.py
app/services/: admin_services.py  auth_service.py  seller_service.py
gems_marketplace/: config.py  dependencies.py  main.py
gems_marketplace/api/routers/: admin.py  auth.py  category.py  health.py  products.py  router.py  users.py
gems_marketplace/contracts/: repositories.py
gems_marketplace/db/: deps.py  sessions.py
gems_marketplace/models/: models.py
gems_marketplace/repositories/: categories.py  products.py  refresh_sessions.py  roles.py  users.py
gems_marketplace/schemas/: auth.py  category.py  product.py  user.py
gems_marketplace/services/: admin_services.py  auth_service.py  category_service.py  product_service.py  role_service.py  seller_service.py  user_service.py
(+7 files in other folders)
