[project]
name = "fastapi-marketplace"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleg",email = "taranenko.oleg@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all] (>=0.135.1,<0.136.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg (>=3.3.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.4,<0.16.0)"
]
